Add drone integration